# nummeth_irina

./: CMakeLists.txt
nummeth2017/: CMakeLists.txt  MethodGas.cpp  MethodGas.h  MethodHeat.cpp  MethodHeat.h  main.cpp  mesh.cpp  mesh.h  method.cpp  method.h  nummeth2017.cpp  nummeth2017.h
